SERVER-25979 View graph invalid on WUOW rollback